--- a/public/scss/partials/ui/_comments.scss
+++ b/public/scss/partials/ui/_comments.scss
@@ -79,7 +79,7 @@ $avatar-width: 20px;
     padding:0;
     margin-bottom: 20px;
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
     .comment {
         padding: 10px;
         .avatar-section {
