--- a/public/scss/partials/ui/_poll.scss
+++ b/public/scss/partials/ui/_poll.scss
@@ -26,7 +26,7 @@ $name-col-width: 250px;
 }
 .poll {
     width: 100%;
-    overflow-x:scroll;
+    overflow-x: auto;
 }
 
 .poll-header {
